-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.7.2
-
None
-
-
8cae0aeff (dev), c1524cf46 (6.8), 4d8f95fe7 (6.7)
Downstream: https://github.com/seanwu1105/vscode-qt-for-python/issues/326 https://github.com/seanwu1105/vscode-qt-for-python/issues/323
qmlls does not read .qmllint.ini . It only reads .qmlls.ini . This can be seen from the source code:
] ag settings tools/qmlls/qmllanguageservertool.cpp 10:#include <QtQmlToolingSettings/private/qqmltoolingsettings_p.h> 137: QQmlToolingSettings settings(QLatin1String("qmlls")); 165: settings.addOption(buildDir); 169: QLatin1String("Writes defaults settings to .qmlls.ini and exits (Warning: This " 170: "will overwrite any existing settings and comments!)")); 173: QCommandLineOption ignoreSettings(QStringList() << "ignore-settings", 174: QLatin1String("Ignores all settings files and only takes " 176: parser.addOption(ignoreSettings); 182: settings.addOption("no-cmake-calls", "false"); 187: return settings.writeDefaults() ? 0 : 1; 220: (parser.isSet(ignoreSettings) ? nullptr : &settings));
- relates to
-
QTBUG-128866 qmlls: read .qmlformat.ini files for the formatting
-
- Closed
-
- resulted in
-
QTBUG-127687 qmlls does not print warning categories on warnings
-
- Closed
-
| For Gerrit Dashboard: QTBUG-127602 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 579657,5 | qmlls: follow .qmllint.ini warning configurations | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 580414,2 | qmlls: follow .qmllint.ini warning configurations | 6.8 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 580489,3 | qmlls: follow .qmllint.ini warning configurations | 6.7 | qt/qtdeclarative | Status: MERGED | +2 | +1 |