qmlls: follow .qmllint.ini warning configurations

Move the methods used to set the linting category level from
qmllint/main.cpp to qqmljsloggingutils{.cpp,_p.h} so that qmlls can
reuse them to follow .qmllint.ini warning configuration files.

Also add early returns to the code of updateLogLevels.

Fixes: QTBUG-127602
Change-Id: I12919226c340a2c7a16aac6cd319ca2483611530
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
(cherry picked from commit 8cae0aeff4e72f74046420f96a40eb6e09519ea9)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit c1524cf46b073454947c9e4641a34e35b5eef019)