src/qmlcompiler/qqmljsloggingutils_p.h
@@ -22,6 +22,9 @@
 
 QT_BEGIN_NAMESPACE
 
+class QQmlToolingSettings;
+class QCommandLineParser;
+
 namespace QQmlJS {
 
 using LoggerWarningId = QQmlSA::LoggerWarningId;
@@ -100,6 +103,14 @@ private:
     bool m_isDefault = false; // Whether or not the category can be disabled
     bool m_changed = false;
 };
+
+namespace LoggingUtils {
+Q_QMLCOMPILER_EXPORT void updateLogLevels(QList<LoggerCategory> &categories,
+                                          const QQmlToolingSettings &settings,
+                                          QCommandLineParser *parser);
+
+Q_QMLCOMPILER_EXPORT QString levelToString(const QQmlJS::LoggerCategory &category);
+} // namespace LoggingUtils
 
 } // namespace QQmlJS
 
