tests/auto/qmlls/modules/tst_qmlls_modules.h
@@ -56,6 +56,8 @@ private slots:
     void renameUsages();
     void linting_data();
     void linting();
+    void warnings_data();
+    void warnings();
     void rangeFormatting_data();
     void rangeFormatting();
     void qmldirImports_data();
